// Copyright (c) Intangible Realities Laboratory, University of Bristol. All rights reserved.

syntax = "proto3";
import "google/protobuf/struct.proto";

package nanover.protocol.state;

message StateUpdate {
    // Struct where each field is an updated state key and it's latest value,
    // where null is equivalent to a key removal.
    google.protobuf.Struct changed_keys = 1;
}
