
syntax = "proto3";

import "nanover/protocol/array.proto";
import "google/protobuf/struct.proto";

package nanover.protocol.trajectory;

message FrameData {
  map<string, google.protobuf.Value> values = 1;
  map<string, nanover.protocol.ValueArray> arrays = 2;
}

message GetFrameResponse {
  uint32 frame_index = 1;
  nanover.protocol.trajectory.FrameData frame = 2;
}
